--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Process::YAML.
 
+0.02  Wed Jan 18 23:17:30 2006
+	- Documentation fix clarifying statements about the use of
+	  YAML::Syck over YAML+Spiffy
+
 0.01  Sat Jan 14 17:07:51 2006
 	- original version as uploaded to CPAN
 
