--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Process::YAML version 0.03
-==========================
+Process::YAML
+=============
 
 DESCRIPTION
 "Process::YAML" provides an implementation of the Process::Serializable
